--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # ========================================
-# MuPoll Environment Variables
+# debrief Environment Variables
 # ========================================
 # Copy this file to .env.local and fill in your values
 
