feat: Implement email invitation system for ideas with dedicated server environment, email service, and API route.

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,16 @@ SUPABASE_SECRET_KEY=your_supabase_service_role_key_here
 # NEXT_PUBLIC_APP_URL=https://your-domain.com
 
 # ========================================
+# Email Configuration (Optional - for team invitations)
+# ========================================
+# SMTP settings for AWS SES or other email providers
+# EMAIL_HOST=email-smtp.ap-south-1.amazonaws.com
+# EMAIL_HOST_USER=your_smtp_username
+# EMAIL_HOST_PASSWORD=your_smtp_password
+# EMAIL_PORT=587
+# FROM_MAIL=noreply@yourdomain.com
+
+# ========================================
 # Google OAuth Setup (in Supabase Dashboard)
 # ========================================
 # 1. Go to Supabase Dashboard → Authentication → Providers → Google
